WIP on widgetDecoration (almost finished)